--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
     packages:
       - ca-certificates
 
-install: "pip install Flask"
+install: "pip install -r requirements.txt"
 
 script:
   - echo "Unit tests"
