--- a/config.yml
+++ b/config.yml
@@ -2,9 +2,15 @@ machine:
   python:
     version: 3.5.2
 
+
 dependencies:
   override:
     - pip install -r requirements.txt
+
+- run:
+      name: Run Servers
+      command: python app.py
+      background: true    
 
 test:
   override:
