--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.5
+      - image: circleci/python:3.6.1
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -45,17 +45,12 @@ jobs:
       # https://pytest.org
       # https://nose.readthedocs.io
       - run:
-          name: run application 
+          name: run tests
           command: |
             . venv/bin/activate
-            python app.py
-          background: true
+            python runserver.py
 
-      - run:
-          name: run tests
-          command:
-            - nosetests test_flask.py
-      
       - store_artifacts:
           path: test-reports
           destination: test-reports
+          
